--- a/templates/home.html
+++ b/templates/home.html
@@ -13,66 +13,7 @@
   </head>
 
   <body class="flex flex-col min-h-screen">
-    <header
-      class="sticky top-0 z-50 w-full border-b bg-white/95 backdrop-blur supports-[backdrop-filter]:bg-white/60"
-    >
-      <div class="container mx-auto flex h-16 items-center px-4">
-        <a href="/" class="flex items-center space-x-2">
-          <i data-lucide="smartphone" class="h-6 w-6 text-blue-600"></i>
-          <span class="font-bold text-xl">TechStore</span>
-        </a>
-        <nav class="hidden md:flex ml-auto gap-6">
-          <a
-            class="text-sm font-medium hover:text-blue-600 transition-colors"
-            href="{% url 'catalogo' %}"
-            >Productos</a
-          >
-          <a
-            class="text-sm font-medium hover:text-blue-600 transition-colors"
-            href="#"
-            >Ofertas</a
-          >
-          <a
-            class="text-sm font-medium hover:text-blue-600 transition-colors"
-            href="#"
-            >Soporte</a
-          >
-          {% if user.is_authenticated %}
-          <a
-            class="text-sm font-medium hover:text-blue-600 transition-colors"
-            href="{% url 'ver_carrito' %}"
-            >Carrito</a
-          >
-
-          <form
-            action="{% url 'logout' %}"
-            method="post"
-            class="display:inline-flex"
-          >
-            {% csrf_token %}
-            <button
-              type="submit"
-              class="text-sm font-medium hover:text-blue-600 transition-colors"
-            >
-              Cerrar Sesión
-            </button>
-          </form>
-
-          {% else %}
-          <a
-            class="text-sm font-medium hover:text-blue-600 gittransition-colors"
-            href="{% url 'login' %}"
-            >Iniciar Sesión</a
-          >
-          {% endif %}
-        </nav>
-
-        <button class="ml-2 p-2 md:hidden">
-          <i data-lucide="menu" class="h-6 w-6"></i>
-        </button>
-      </div>
-    </header>
-
+    {% include 'nav.html' %}
     <main class="flex-1">
       <section
         class="w-full py-12 md:py-24 lg:py-32 xl:py-48 bg-gradient-to-r from-black via-gray-900 to-black text-white"
@@ -119,6 +60,7 @@
             <div
               class="bg-white rounded-lg shadow-md p-6 group hover:shadow-lg transition-shadow duration-300"
             >
+          
               <i
                 data-lucide="smartphone"
                 class="w-10 h-10 mb-4 text-blue-600 group-hover:scale-110 transition-transform duration-300"
