--- a/catalogo_app/templates/catalogo_app/catalogo.html
+++ b/catalogo_app/templates/catalogo_app/catalogo.html
@@ -1,90 +1,60 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Catalogo</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/svg+xml"
-        href="https://static.vecteezy.com/system/resources/previews/002/483/079/non_2x/shopping-cart-trolley-supermarket-line-style-free-vector.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart Js</title>
-    <link rel="stylesheet" href="{% static 'css/catalogo.css' %}">
+  <body>
+    {% include 'nav.html' %}
+    <div class="flex">
+      <aside class="hidden md:block w-64 bg-white p-6">
+        <h2 class="font-bold text-lg mb-4">Categorías</h2>
+        <ul>
+          {% for categoria in categorias %}
+            <li class="cursor-pointer p-2 hover:bg-gray-100">
+              <a href="">{{ categoria.nombre }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </aside>
 
-</head>
-
-<body>
-    <header>
-        <div class="header-section container">
-            <h1 style="font-size: 30px;">NANI</h1>
-
-            <div>
-                <img onclick="showCart(this)" class="cart" src="img/icons8-carrito-de-compras.gif" alt="">
-                <p class="count-product">0</p>
+      <main class="flex-1 p-6">
+        <h2 class="text-2xl font-bold mb-6">Productos</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          {% for producto in productos %}
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+              <img src="/static/images/imgprueba.jpg" alt="imagen prueba" class="w-full h-48 object-cover" />
+              <div class="p-4">
+                <h3 class="font-bold text-lg mb-2">{{ producto.nombre }}</h3>
+                <p class="text-gray-600">{{ producto.categoria }}</p>
+                <p class="text-blue-600 font-bold mt-2">${{ producto.precio }}</p>
+                <button class="mt-4 w-full bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 transition duration-300">Añadir al carrito</button>
+              </div>
             </div>
-            <button onclick="redirectToCheckout()">Pagar</button>
-
-            <div class="cart-products" id="products-id">
-                <p class="close-btn" onclick="closeBtn()">X</p>
-                <h3>Mi carrito</h3>
-                <div class="card-items">
-                    <div class="item">
-                        <img src="./images/products/keyboard-1.jpg" alt="">
-                        <div class="item-content">
-                            <h5>name of product name of product name of product</h5>
-                            <h5 class="cart-price">45.50$</h5>
-                            <h6>Amount: 3</h6>
-                        </div>
-                        <span>X</span>
-                    </div>
-    
-                    <div class="item">
-                        <img src="./images/products/keyboard-1.jpg" alt="">
-                        <div class="item-content">
-                            <h5>name of product name of product name of product</h5>
-                            <h5 class="cart-price">45.50$</h5>
-                            <h6>Amount: 3</h6>
-                        </div>
-                        <span class="delete-product" data-id="">X</span>
-                    </div>
-                </div>
-                <h2>Total: $<strong class="price-total">0</strong></h2>
-            </div>
+          {% endfor %}
         </div>
-    </header>
-    <section class="container">
-        <div class="products">
-            {% for producto in productos %}
-            <div class="carts">
-                <div>
-                    <img src="{% static 'images/imgprueba.jpg' %}" alt="">
-
-                    <p><span>{{ producto.precio }}</span>$</p>
-                </div>
-                <p class="title">{{ producto.nombre }}</p>
-                <a href=" {% url 'agregar_al_carrito' producto.id %}" class="btn-add-cart">Agregar al carrito</a>
-                </div>
-                {% endfor %}
-            </div>
-    </section>
-
-
+      </main>
+    </div>
 
     <script>
-        function showCart(x) {
-            document.getElementById("products-id").style.display = "block";
-        }
-        function closeBtn() {
-            document.getElementById("products-id").style.display = "none";
-        }
-        function redirectToCheckout() {
-            window.location.href = "checkout.html";
-        }
-
+      function showCart(x) {
+        document.getElementById('products-id').style.display = 'block'
+      }
+      function closeBtn() {
+        document.getElementById('products-id').style.display = 'none'
+      }
+      function redirectToCheckout() {
+        window.location.href = 'checkout.html'
+      }
     </script>
 
     <script src="{% static 'js/catalogo.js' %}"></script>
-
-</body>
-
+    {% include 'footer.html' %}
+  </body>
 </html>
