--- a/catalogo_app/templates/catalogo_app/catalogo.html
+++ b/catalogo_app/templates/catalogo_app/catalogo.html
@@ -34,27 +34,14 @@
                 <h3 class="font-bold text-lg mb-2">{{ producto.nombre }}</h3>
                 <p class="text-gray-600">{{ producto.categoria }}</p>
                 <p class="text-blue-600 font-bold mt-2">${{ producto.precio }}</p>
-                <button class="mt-4 w-full bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 transition duration-300">Añadir al carrito</button>
+                <a href="{% url 'agregar_al_carrito' producto.id %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-center">
+                  Añadir al carrito
+              </a>
               </div>
             </div>
           {% endfor %}
         </div>
       </main>
     </div>
-
-    <script>
-      function showCart(x) {
-        document.getElementById('products-id').style.display = 'block'
-      }
-      function closeBtn() {
-        document.getElementById('products-id').style.display = 'none'
-      }
-      function redirectToCheckout() {
-        window.location.href = 'checkout.html'
-      }
-    </script>
-
-    <script src="{% static 'js/catalogo.js' %}"></script>
-    {% include 'footer.html' %}
   </body>
 </html>
