--- a/static/css/registro.css
+++ b/static/css/registro.css
@@ -124,3 +124,70 @@ input[type="email"]:focus {
     border-color: #003B5C;
     outline: none;
 }
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .registro-container {
+        width: 80%; /* Ajusta el ancho al 80% en pantallas más pequeñas */
+        padding: 20px;
+    }
+
+    h2 {
+        font-size: 18px; /* Reducir el tamaño de la fuente en pantallas pequeñas */
+    }
+
+    .icon-circle {
+        width: 60px;
+        height: 60px;
+    }
+
+    .icon-circle img {
+        width: 35px;
+        height: 35px;
+    }
+
+    .create-account-btn {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+
+    input[type="text"], 
+    input[type="password"],
+    input[type="email"] {
+        padding: 8px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 480px) {
+    .registro-container {
+        width: 90%; /* Ajusta el ancho al 90% en pantallas muy pequeñas */
+        padding: 15px;
+    }
+
+    h2 {
+        font-size: 16px; /* Reducir aún más el tamaño de la fuente */
+    }
+
+    .icon-circle {
+        width: 50px;
+        height: 50px;
+    }
+
+    .icon-circle img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .create-account-btn {
+        font-size: 14px;
+        padding: 8px 14px;
+    }
+
+    input[type="text"], 
+    input[type="password"],
+    input[type="email"] {
+        padding: 8px;
+        font-size: 12px;
+    }
+}
